# Gazebo_Ros2

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/moveit/: freddy.srdf  moveit_controllers.yaml
config/rviz/: warehouse.rviz
forklift_warehouse/: CMakeLists.txt  README.md  package.xml
forklift_warehouse/config/moveit/: kinematics.yaml  ompl_planning.yaml
forklift_warehouse/launch/: moveit.launch.py  warehouse.launch.py
forklift_warehouse/ontology/: warehouse_robot.owl
forklift_warehouse/src/: adaptive_box_transport.py  box_transport.py  lidar_box_detector.py  ontology_reasoner.py  reactive_navigator.py
forklift_warehouse/urdf/: freddy_lidar.urdf.xacro
forklift_warehouse/worlds/: warehouse.sdf
launch/: full_system.launch.py  warehouse.launch.py
src/: lidar_box_detector.py  ontology_reasoner.py  random_world_generator.py  reactive_navigator.py  teleop_arrow_keys.py
src/forklift_gazebo/: CMakeLists.txt  README.md  package.xml
src/forklift_gazebo/launch/: forklift_teleop.launch.py
src/forklift_gazebo/models/fork_lift_shift/: model.sdf
src/forklift_gazebo/plugins/: forklift.cc
src/forklift_gazebo/src/: auto_drive.py  keyboard_teleop.py
src/forklift_gazebo/urdf/: forklift.urdf
src/forklift_gazebo/worlds/: forklift.world
src/forklift_ware_sim/: CMakeLists.txt  package.xml
src/forklift_ware_sim/launch/: forklift_warehouse.launch.py
src/forklift_ware_sim/models/fork_lift_shift/: model.sdf
src/forklift_ware_sim/plugins/: forklift.cc
src/forklift_ware_sim/scripts/: forklift_ops.py
src/forklift_ware_sim/worlds/: forklift_warehouse.sdf
src/forklift_warehouse/: CMakeLists.txt  package.xml
src/forklift_warehouse/launch/: warehouse.launch.py
src/forklift_warehouse/models/fork_lift_shift/: model.sdf
src/forklift_warehouse/models/forklift_freebody/: model.sdf
src/forklift_warehouse/models/stl/: model.config
src/forklift_warehouse/models/tugbot/: model.sdf
src/forklift_warehouse/models/tugbot_warehouse/: model.config
src/forklift_warehouse/plugins/: fork_lift_freebody_world.cc  fork_lift_world.cc  forklift.cc  forklift_freebody.cc
src/forklift_warehouse/src/: keyboard_teleop.py  keyboard_teleop_freebody.py
src/forklift_warehouse/urdf/: forklift.urdf
src/forklift_warehouse/worlds/: warehouse_with_forklift.sdf
src/hydraulic_bot/: CMakeLists.txt  package.xml
src/hydraulic_bot/launch/: spawn_robot.launch.py
src/hydraulic_bot/urdf/: hydraulic_arm.xacro  hydraulic_mobile_robot.urdf.xacro  mobile_base.xacro
src/mobile_manipulator_sim/: package.xml  setup.cfg  setup.py
src/mobile_manipulator_sim/launch/: main.launch.py  simulation.launch.py  tb3_nav2.launch.py  turtlebot3_manipulation.launch.py
src/mobile_manipulator_sim/mobile_manipulator_sim/: goal_sender_node.py  manipulation_node.py  mission_controller.py  navigation_node.py  perception_node.py  world_generator.py
src/mobile_manipulator_sim/urdf/: common_properties.xacro  manipulator.xacro  mobile_base.xacro  robot.urdf.xacro
src/mobile_manipulator_sim/worlds/: maze.sdf  task_world.sdf  tb3_pick_world.sdf
src/my_arm_description/: CMakeLists.txt  package.xml
src/my_arm_description/config/: arm_controllers.yaml
src/my_arm_description/launch/: sim.launch.py
src/my_arm_description/urdf/: simple_arm.urdf.xacro
src/my_robot_bringup/: CMakeLists.txt  package.xml
src/my_robot_bringup/launch/: bringup.launch.py
src/my_robot_control/: package.xml  setup.py
src/my_robot_control/launch/: control.launch.py
src/my_robot_control/my_robot_control/: decision_node.py  obstacle_avoidance.py
src/my_robot_description/: package.xml
src/my_robot_description/launch/: spawn_robot.launch.py
src/my_robot_description/urdf/: my_robot.urdf.xacro  robot.urdf.xacro
src/my_robot_description/urdf/hands/: five_finger_hand.urdf.xacro
src/my_robot_gazebo/: CMakeLists.txt  generate_world.py  package.xml
src/my_robot_gazebo/launch/: gazebo.launch.py
src/my_robot_gazebo/worlds/: arena.sdf  minimal.sdf
src/ware/: package.xml  setup.cfg  setup.py
src/ware/config/: bridge.yaml
src/ware/launch/: warehouse.launch.py
src/ware/models/tugbot_warehouse/: model.sdf
src/ware/rviz/: warehouse.rviz
src/ware/urdf/: tugbot.urdf
src/ware/ware/: controller.py
urdf/: freddy_lidar.urdf.xacro  nav_robot.urdf.xacro
worlds/: warehouse.sdf
