<?xml version="1.0"?>
<package format="3">
  <name>my_robot_bringup</name>
  <version>0.0.0</version>
  <description>Master bringup package</description>
  <maintainer email="jaikrrishs@todo.todo">jaikrrishs</maintainer>
  <license>TODO: License declaration</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>my_robot_description</exec_depend>
  <exec_depend>my_robot_gazebo</exec_depend>
  <exec_depend>my_robot_control</exec_depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
