<?xml version="1.0"?>
<package format="3">
  <name>my_robot_control</name>
  <version>0.0.0</version>
  <description>Robot control and decision logic</description>
  <maintainer email="jaikrrishs@todo.todo">jaikrrishs</maintainer>
  <license>TODO: License declaration</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
